# libhanja

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
data/: ks_normalize_unicode.txt
include/: convert.h  dictionary.h  hanja.h  scoped_timer.h  types.h
src/: convert.cc  dictionary.cc  hanja.cc  main.cc  pyhanja.cc  types.cc
